application-set/test-apps/http-echo/httpecho-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
  namespace: http-echo
spec:
  selector:
    matchLabels:
      app: echo1
  replicas: 1
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
      - name: echo1
        image: hashicorp/http-echo
        args:
        - "-text=echo1"
        ports:
        - containerPort: 5678

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo2
  namespace: http-echo
spec:
  selector:
    matchLabels:
      app: echo2
  replicas: 1
  template:
    metadata:
      labels:
        app: echo2
    spec:
      containers:
      - name: echo2
        image: hashicorp/http-echo
        args:
        - "-text=echo2"
        ports:
        - containerPort: 5678
